--- a/meli-auth.html
+++ b/meli-auth.html
@@ -9,33 +9,64 @@
   <button onclick="startAuth()">Iniciar autenticación</button>
   <p id="info"></p>
   <script>
-    const clientId = '7427123709053353';
-    const redirectUri = 'https://meli-test-frontend.netlify.app';
+  const clientId = '7427123709053353';
+  const redirectUri = 'https://meli-test-frontend.netlify.app';
 
-    function base64URLEncode(str) {
-      return btoa(String.fromCharCode.apply(null, new Uint8Array(str)))
-        .replace(/\+/g, '-').replace(/\//g, '_').replace(/=+$/, '');
-    }
+  function base64URLEncode(str) {
+    return btoa(String.fromCharCode.apply(null, new Uint8Array(str)))
+      .replace(/\+/g, '-').replace(/\//g, '_').replace(/=+$/, '');
+  }
 
-    async function sha256(plain) {
-      const encoder = new TextEncoder();
-      const data = encoder.encode(plain);
-      const hash = await crypto.subtle.digest('SHA-256', data);
-      return base64URLEncode(hash);
-    }
+  async function sha256(plain) {
+    const encoder = new TextEncoder();
+    const data = encoder.encode(plain);
+    const hash = await crypto.subtle.digest('SHA-256', data);
+    return base64URLEncode(hash);
+  }
 
-    async function startAuth() {
-      const codeVerifier = [...crypto.getRandomValues(new Uint8Array(64))]
-        .map(x => ('0' + x.toString(16)).slice(-2)).join('');
+  async function startAuth() {
+    const codeVerifier = [...crypto.getRandomValues(new Uint8Array(64))]
+      .map(x => ('0' + x.toString(16)).slice(-2)).join('');
 
-      const codeChallenge = await sha256(codeVerifier);
-      localStorage.setItem('meli_code_verifier', codeVerifier);
+    const codeChallenge = await sha256(codeVerifier);
+    localStorage.setItem('meli_code_verifier', codeVerifier);
 
-      const authUrl = `https://auth.mercadolibre.com.ar/authorization?response_type=code&client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&code_challenge=${codeChallenge}&code_challenge_method=S256`;
+    const authUrl = `https://auth.mercadolibre.com.ar/authorization?response_type=code&client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&code_challenge=${codeChallenge}&code_challenge_method=S256`;
 
-      document.getElementById("info").innerText = "Redirigiendo...";
-      window.location.href = authUrl;
-    }
-  </script>
+    window.location.href = authUrl;
+  }
+
+  async function exchangeCodeForToken(code) {
+    const codeVerifier = localStorage.getItem('meli_code_verifier');
+
+    const data = new URLSearchParams();
+    data.append('grant_type', 'authorization_code');
+    data.append('client_id', clientId);
+    data.append('code', code);
+    data.append('redirect_uri', redirectUri);
+    data.append('code_verifier', codeVerifier);
+
+    const response = await fetch('https://api.mercadolibre.com/oauth/token', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/x-www-form-urlencoded'
+      },
+      body: data
+    });
+
+    const result = await response.json();
+    console.log(result); // 👉 aquí tendrás access_token, refresh_token, etc.
+
+    document.getElementById("info").innerText = JSON.stringify(result, null, 2);
+  }
+
+  // Detectar si volvimos de Mercado Libre con ?code=
+  const urlParams = new URLSearchParams(window.location.search);
+  const code = urlParams.get('code');
+  if (code) {
+    exchangeCodeForToken(code);
+  }
+</script>
+
 </body>
 </html>
