--- a/meli-auth.html
+++ b/meli-auth.html
@@ -2,71 +2,64 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Mercado Libre PKCE Auth</title>
+  <title>Login con Mercado Libre (PKCE)</title>
 </head>
 <body>
-  <h1>Autenticación Mercado Libre (PKCE)</h1>
+  <h1>Autenticarse con Mercado Libre</h1>
   <button onclick="startAuth()">Iniciar autenticación</button>
-  <p id="info"></p>
+  <pre id="info"></pre>
+
   <script>
-  const clientId = '7427123709053353';
-  const redirectUri = 'https://meli-test-frontend.netlify.app';
+    const clientId = 'TU_CLIENT_ID'; // ← Reemplazar con tu client_id real
+    const redirectUri = 'https://meli-test-frontend.netlify.app';
 
-  function base64URLEncode(str) {
-    return btoa(String.fromCharCode.apply(null, new Uint8Array(str)))
-      .replace(/\+/g, '-').replace(/\//g, '_').replace(/=+$/, '');
-  }
+    function base64URLEncode(str) {
+      return btoa(String.fromCharCode(...new Uint8Array(str)))
+        .replace(/\+/g, '-').replace(/\//g, '_').replace(/=+$/, '');
+    }
 
-  async function sha256(plain) {
-    const encoder = new TextEncoder();
-    const data = encoder.encode(plain);
-    const hash = await crypto.subtle.digest('SHA-256', data);
-    return base64URLEncode(hash);
-  }
+    async function sha256(plain) {
+      const encoder = new TextEncoder();
+      const data = encoder.encode(plain);
+      const hash = await crypto.subtle.digest('SHA-256', data);
+      return base64URLEncode(hash);
+    }
 
-  async function startAuth() {
-    const codeVerifier = [...crypto.getRandomValues(new Uint8Array(64))]
-      .map(x => ('0' + x.toString(16)).slice(-2)).join('');
+    async function startAuth() {
+      const verifier = [...crypto.getRandomValues(new Uint8Array(64))]
+        .map(x => ('0' + x.toString(16)).slice(-2)).join('');
+      const challenge = await sha256(verifier);
+      localStorage.setItem('meli_code_verifier', verifier);
 
-    const codeChallenge = await sha256(codeVerifier);
-    localStorage.setItem('meli_code_verifier', codeVerifier);
+      const url = `https://auth.mercadolibre.com.ar/authorization?response_type=code&client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&code_challenge=${challenge}&code_challenge_method=S256`;
+      window.location.href = url;
+    }
 
-    const authUrl = `https://auth.mercadolibre.com.ar/authorization?response_type=code&client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&code_challenge=${codeChallenge}&code_challenge_method=S256`;
+    async function exchangeToken(code) {
+      const verifier = localStorage.getItem('meli_code_verifier');
+      const body = new URLSearchParams({
+        grant_type: 'authorization_code',
+        client_id: clientId,
+        code,
+        redirect_uri: redirectUri,
+        code_verifier: verifier
+      });
 
-    window.location.href = authUrl;
-  }
+      const res = await fetch('https://api.mercadolibre.com/oauth/token', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+        body
+      });
 
-  async function exchangeCodeForToken(code) {
-    const codeVerifier = localStorage.getItem('meli_code_verifier');
+      const data = await res.json();
+      document.getElementById('info').textContent = JSON.stringify(data, null, 2);
+      console.log("Access Token:", data.access_token);
+    }
 
-    const data = new URLSearchParams();
-    data.append('grant_type', 'authorization_code');
-    data.append('client_id', clientId);
-    data.append('code', code);
-    data.append('redirect_uri', redirectUri);
-    data.append('code_verifier', codeVerifier);
-
-    const response = await fetch('https://api.mercadolibre.com/oauth/token', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/x-www-form-urlencoded'
-      },
-      body: data
-    });
-
-    const result = await response.json();
-    console.log(result); // 👉 aquí tendrás access_token, refresh_token, etc.
-
-    document.getElementById("info").innerText = JSON.stringify(result, null, 2);
-  }
-
-  // Detectar si volvimos de Mercado Libre con ?code=
-  const urlParams = new URLSearchParams(window.location.search);
-  const code = urlParams.get('code');
-  if (code) {
-    exchangeCodeForToken(code);
-  }
-</script>
-
+    const code = new URLSearchParams(window.location.search).get('code');
+    if (code) {
+      exchangeToken(code);
+    }
+  </script>
 </body>
 </html>
