--- a/meli-auth.html
+++ b/meli-auth.html
@@ -2,12 +2,17 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Login Mercado Libre PKCE</title>
+  <title>Login Mercado Libre (PKCE)</title>
+  <style>
+    body { font-family: sans-serif; padding: 2rem; }
+    button { padding: 0.6rem 1.2rem; font-size: 1rem; }
+    pre { background: #f0f0f0; padding: 1rem; margin-top: 2rem; }
+  </style>
 </head>
 <body>
   <h1>Autenticación con Mercado Libre (PKCE)</h1>
   <button onclick="startAuth()">Iniciar autenticación</button>
-  <pre id="info"></pre>
+  <pre id="info">Esperando acción...</pre>
 
   <script>
     const clientId = '7427123709053353';
@@ -30,7 +35,7 @@
         .map(x => ('0' + x.toString(16)).slice(-2)).join('');
       const challenge = await sha256(verifier);
       localStorage.setItem('meli_code_verifier', verifier);
-      console.log("code_verifier (guardalo si vas a usar curl):", verifier);
+      console.log("🔐 code_verifier:", verifier);
 
       const authUrl = `https://auth.mercadolibre.com.ar/authorization?response_type=code&client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&code_challenge=${challenge}&code_challenge_method=S256`;
       window.location.href = authUrl;
@@ -39,7 +44,7 @@
     async function exchangeCodeForToken(code) {
       const verifier = localStorage.getItem('meli_code_verifier');
       if (!verifier) {
-        document.getElementById("info").innerText = "❌ No hay code_verifier en localStorage.";
+        document.getElementById("info").innerText = "❌ No se encontró el code_verifier en localStorage.";
         return;
       }
 
@@ -51,20 +56,22 @@
         code_verifier: verifier
       });
 
-      const res = await fetch('https://api.mercadolibre.com/oauth/token', {
+      const response = await fetch('https://api.mercadolibre.com/oauth/token', {
         method: 'POST',
         headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
         body: params
       });
 
-      const data = await res.json();
+      const data = await response.json();
+      console.log("✅ Access Token:", data.access_token);
       document.getElementById("info").textContent = JSON.stringify(data, null, 2);
-      console.log("Access Token:", data.access_token);
     }
 
-    const urlCode = new URLSearchParams(window.location.search).get("code");
-    if (urlCode) {
-      exchangeCodeForToken(urlCode);
+    const urlParams = new URLSearchParams(window.location.search);
+    const code = urlParams.get("code");
+    if (code) {
+      document.getElementById("info").innerText = "🔄 Intercambiando code por token...";
+      exchangeCodeForToken(code);
     }
   </script>
 </body>
