--- a/meli-auth.html
+++ b/meli-auth.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Login Mercado Libre (PKCE)</title>
-  <style>
-    body { font-family: sans-serif; padding: 2rem; }
-    button { padding: 0.6rem 1.2rem; font-size: 1rem; }
-    pre { background: #f0f0f0; padding: 1rem; margin-top: 2rem; }
-  </style>
+  <meta charset="UTF-8" />
+  <title>Login con Mercado Libre (PKCE)</title>
 </head>
 <body>
-  <h1>Autenticación con Mercado Libre (PKCE)</h1>
+  <h1>Autenticarse con Mercado Libre</h1>
   <button onclick="startAuth()">Iniciar autenticación</button>
-  <pre id="info">Esperando acción...</pre>
+  <pre id="info"></pre>
 
   <script>
-    const clientId = '7427123709053353';
-    const redirectUri = 'https://meli-test-frontend.netlify.app';
+    const clientId = '7427123709053353'; // Reemplazado con tu real
+    const redirectUri = 'https://local.meli.test';
 
     function base64URLEncode(str) {
       return btoa(String.fromCharCode(...new Uint8Array(str)))
@@ -35,20 +30,14 @@
         .map(x => ('0' + x.toString(16)).slice(-2)).join('');
       const challenge = await sha256(verifier);
       localStorage.setItem('meli_code_verifier', verifier);
-      console.log("🔐 code_verifier:", verifier);
 
-      const authUrl = `https://auth.mercadolibre.com.ar/authorization?response_type=code&client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&code_challenge=${challenge}&code_challenge_method=S256`;
-      window.location.href = authUrl;
+      const url = `https://auth.mercadolibre.com.ar/authorization?response_type=code&client_id=${clientId}&redirect_uri=${encodeURIComponent(redirectUri)}&code_challenge=${challenge}&code_challenge_method=S256`;
+      window.location.href = url;
     }
 
-    async function exchangeCodeForToken(code) {
+    async function exchangeToken(code) {
       const verifier = localStorage.getItem('meli_code_verifier');
-      if (!verifier) {
-        document.getElementById("info").innerText = "❌ No se encontró el code_verifier en localStorage.";
-        return;
-      }
-
-      const params = new URLSearchParams({
+      const body = new URLSearchParams({
         grant_type: 'authorization_code',
         client_id: clientId,
         code,
@@ -56,22 +45,20 @@
         code_verifier: verifier
       });
 
-      const response = await fetch('https://api.mercadolibre.com/oauth/token', {
+      const res = await fetch('https://api.mercadolibre.com/oauth/token', {
         method: 'POST',
         headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-        body: params
+        body
       });
 
-      const data = await response.json();
-      console.log("✅ Access Token:", data.access_token);
-      document.getElementById("info").textContent = JSON.stringify(data, null, 2);
+      const data = await res.json();
+      document.getElementById('info').textContent = JSON.stringify(data, null, 2);
+      console.log("Access Token:", data.access_token);
     }
 
-    const urlParams = new URLSearchParams(window.location.search);
-    const code = urlParams.get("code");
+    const code = new URLSearchParams(window.location.search).get('code');
     if (code) {
-      document.getElementById("info").innerText = "🔄 Intercambiando code por token...";
-      exchangeCodeForToken(code);
+      exchangeToken(code);
     }
   </script>
 </body>
